--- a/src/Extension/RemoteDebuggerLauncherUI/Resources.resx
+++ b/src/Extension/RemoteDebuggerLauncherUI/Resources.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CertificateServicesTrustCancelledByUser" xml:space="preserve">
-    <value>Cancelling trusting Root CA</value>
-  </data>
   <data name="CommonCancelButtonLabel" xml:space="preserve">
     <value>Cancel</value>
   </data>
@@ -284,7 +281,7 @@ Make sure you selected a 'SshRemoteLaunch' launch profile.</value>
   <data name="RemoteCommandCommonFailedCurlNotInstalled" xml:space="preserve">
     <value>FAILED: cURL is not installed. please install to use the command</value>
   </data>
-  <data name="RemoteCommandCommonFailedRsyncNotInstalled" xml:space="preserve">
+  <data name="RemoteCommandDeployRemoteFolderFailedRsyncNotInstalled" xml:space="preserve">
     <value>FAILED: rsync is not installed. Please install to rsync bulk copy</value>
   </data>
   <data name="RemoteCommandCommonProfile" xml:space="preserve">
@@ -603,5 +600,14 @@ Replace: Replace the existing certificate with a new one.</value>
   </data>
   <data name="SetupSshDialogUsernameLabel" xml:space="preserve">
     <value>User name</value>
+  </data>
+  <data name="RemoteCommandDeployRemoteFolderFailedRsyncNoAbsolutePath" xml:space="preserve">
+    <value>FAILED: rsync requires an absolute path for the local files</value>
+  </data>
+  <data name="CertificateServicesTrustCancelledByUser" xml:space="preserve">
+    <value>Cancelling trusting Root CA</value>
+  </data>
+  <data name="RemoteCommandDeployRemoteFolderFailedRsyncExitCode" xml:space="preserve">
+    <value>FAILED: rsync terminated with exit code {0}</value>
   </data>
 </root>
