--- a/src/Extension/RemoteDebuggerLauncherUI/Resources.resx
+++ b/src/Extension/RemoteDebuggerLauncherUI/Resources.resx
@@ -617,4 +617,8 @@ Replace: Replace the existing certificate with a new one.</value>
     <value>Launching rsync (version 3.4.1  protocol version 32) session...</value>
     <comment>Output pane: rsync session starts</comment>
   </data>
+  <data name="RemoteCommandDeployRemoteFolderScpFullStart" xml:space="preserve">
+    <value>copying all files with SCP...</value>
+    <comment>Output pane: SCP session starts</comment>
+  </data>
 </root>
